[BZ #4342]

2007-04-27  Ulrich Drepper  <drepper@redhat.com>
	[BZ #4342]
	* stdio-common/vfscanf.c (_IO_vfscanf_internal): Allow
	hexa-decimal floats without exponent.
	* stdio-common/tstscanf.c (main): Adjust Test 8 test for success.

	* iconv/gconv_charset.h (strip): Allow ':'.